[gd_scene load_steps=22 format=2]

[ext_resource path="res://Screens/ArtInfo.gd" type="Script" id=1]
[ext_resource path="res://World/CollectProgress.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/artframe_portrait_shadow.png" type="Texture" id=3]
[ext_resource path="res://assets/white.png" type="Texture" id=4]
[ext_resource path="res://assets/artframe_portrait.png" type="Texture" id=5]
[ext_resource path="res://assets/textInfo.png" type="Texture" id=6]
[ext_resource path="res://assets/vignette.png" type="Texture" id=7]
[ext_resource path="res://Screens/shadow_material.tres" type="Material" id=8]
[ext_resource path="res://assets/artframe_landscape.png" type="Texture" id=9]
[ext_resource path="res://World/Artworks/_artworks_scifistuff_study.png" type="Texture" id=10]
[ext_resource path="res://assets/artframe_landscape_shadow.png" type="Texture" id=11]
[ext_resource path="res://assets/wall_texture.png" type="Texture" id=12]
[ext_resource path="res://default_theme.tres" type="Theme" id=13]
[ext_resource path="res://fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://fonts/Pacifico-Regular.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/pixelize.shader" type="Shader" id=16]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 16 )
shader_param/size_x = 0.008
shader_param/size_y = 0.008

[sub_resource type="DynamicFont" id=2]
use_filter = true
extra_spacing_bottom = 1
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=4]
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ArtInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="."]
modulate = Color( 0.313726, 0.305882, 0.298039, 0.807843 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wall_texture" type="Sprite" parent="BlackOverlay"]
modulate = Color( 1, 1, 1, 0.439216 )
position = Vector2( 512, 303.439 )
scale = Vector2( 1.63517, 1.43885 )
texture = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.561
margin_right = 300.0
margin_bottom = 199.439
rect_min_size = Vector2( 600, 400 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
modulate = Color( 0.498039, 0.478431, 0.462745, 1 )
margin_top = 77.0
margin_right = 378.0
margin_bottom = 327.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.315
anchor_top = 0.501
anchor_right = 0.315
anchor_bottom = 0.501
margin_left = -189.0
margin_top = -133.477
margin_right = 189.0
margin_bottom = 126.523
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Artwork_image" type="Sprite" parent="ColorRect/ColorRect"]
position = Vector2( 187.482, 129.801 )
scale = Vector2( 0.118216, 0.118216 )
texture = ExtResource( 10 )

[node name="PixelizeFilter" type="TextureRect" parent="ColorRect"]
material = SubResource( 1 )
anchor_top = 0.167
anchor_right = 0.611
anchor_bottom = 0.817
margin_left = 5.0
margin_top = 0.199997
margin_right = 7.39999
margin_bottom = 0.199982
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Artframe_portrait" type="Node2D" parent="ColorRect"]
visible = false

[node name="frame" type="Sprite" parent="ColorRect/Artframe_portrait"]
position = Vector2( 189.997, 199.676 )
scale = Vector2( 0.286567, 0.286567 )
texture = ExtResource( 5 )

[node name="shadow" type="Sprite" parent="ColorRect/Artframe_portrait/frame"]
modulate = Color( 1, 1, 1, 0.588235 )
material = ExtResource( 8 )
position = Vector2( -40.0959, 69.6619 )
texture = ExtResource( 3 )

[node name="Artframe_landscape" type="Node2D" parent="ColorRect"]

[node name="frame" type="Sprite" parent="ColorRect/Artframe_landscape"]
position = Vector2( 189.997, 200.561 )
scale = Vector2( 0.286567, 0.286567 )
texture = ExtResource( 9 )

[node name="shadow" type="Sprite" parent="ColorRect/Artframe_landscape/frame"]
modulate = Color( 1, 1, 1, 0.588235 )
material = ExtResource( 8 )
position = Vector2( 133.561, -74.636 )
scale = Vector2( 1.00154, 1.00154 )
texture = ExtResource( 11 )

[node name="textInfo" type="Node2D" parent="."]
position = Vector2( 212, 99.439 )

[node name="paper" type="Sprite" parent="textInfo"]
position = Vector2( 512.43, 222.872 )
scale = Vector2( 0.438601, 0.438601 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="textInfo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 378.0
margin_top = 177.0
margin_right = 482.0
margin_bottom = 246.0
theme = ExtResource( 13 )
custom_fonts/font = SubResource( 2 )
text = "Title:
Artist:
Value:"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="textInfo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 487.0
margin_top = 161.0
margin_right = 587.0
margin_bottom = 204.0
theme = ExtResource( 13 )
custom_fonts/font = SubResource( 3 )
text = "1x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Artist" type="Label" parent="textInfo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 488.0
margin_top = 202.0
margin_right = 592.0
margin_bottom = 224.0
theme = ExtResource( 13 )
custom_fonts/font = SubResource( 2 )
text = "xanderjakeq"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="textInfo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 488.0
margin_top = 227.0
margin_right = 497.0
margin_bottom = 248.0
theme = ExtResource( 13 )
custom_fonts/font = SubResource( 4 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressGroup" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="ProgressGroup"]

[node name="ColorRect" type="ColorRect" parent="ProgressGroup"]
modulate = Color( 0, 0, 0, 0.258824 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollectProgress" parent="ProgressGroup" instance=ExtResource( 2 )]
position = Vector2( 512, 300 )

[node name="vignette" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.564706 )
material = ExtResource( 8 )
position = Vector2( 478.865, 303.439 )
scale = Vector2( 0.267619, 0.26762 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 5 )
